--- a/ModificarHorario.html
+++ b/ModificarHorario.html
@@ -263,7 +263,7 @@
                     <span id="price">100</span>
                     <button id="edit-price-button">Editar</button>
                   </div>
-                  <button id="open-modal-button"></button>
+                  <button id="open-modal-button">Consultar Horario</button>
                 </div>
               
             
