--- a/RealizarPago.html
+++ b/RealizarPago.html
@@ -38,7 +38,7 @@
   <div class="modal-content1" style="border: none; display: flex; margin-top: 20px; justify-content: center; align-items: center; height: 100%;">
     <div class="panel panel-default" style="max-width: 500px;">
       <div class="panel-heading">
-        <h3 class="panel-title">Selecciona el metodo de pago</h3>
+        <h3 class="panel-title">Selecciona el metodo de pago -  PRECIO: S/100</h3>
       </div>
       <div class="panel-body">
         <form action="comprobante.html"> 
